--- a/bhdmhw1/pom.xml
+++ b/bhdmhw1/pom.xml
@@ -14,6 +14,35 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+    <sourceDirectory>src/main/scala</sourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>org.scala-tools</groupId>
+        <artifactId>maven-scala-plugin</artifactId>
+        <configuration>
+          <launchers>
+            <launcher>
+              <id>Main</id>
+              <mainClass>com.manmachinesoftware.app.bhdmhw1.Main</mainClass>
+              <args>
+
+              </args>
+          </launcher>
+        </launchers>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+        <source>1.5</source>
+        <target>1.5</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -41,6 +70,11 @@
       <artifactId>scalala</artifactId>
       <version>0.3.1-SNAPSHOT</version>
     </dependency>
+    <!--<dependency>
+      <groupID>org.scala-lang</groupID>
+      <artifactID>scala-library</artifactID>
+      <version>2.7.2</version>
+    </dependency>-->
   </dependencies>
 
   <repositories>
@@ -64,17 +98,5 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
-
-    <plugins>
-      <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-  
 </project>
 <!-- vim: set ts=2 sw=2 tw=0 :-->
