--- a/bhdmhw1/pom.xml
+++ b/bhdmhw1/pom.xml
@@ -68,7 +68,7 @@
     <dependency>
       <groupId>org.scalanlp</groupId>
       <artifactId>scalala</artifactId>
-      <version>0.3.1-SNAPSHOT</version>
+      <version>0.4.1-SNAPSHOT</version>
     </dependency>
     <!--<dependency>
       <groupID>org.scala-lang</groupID>
@@ -87,6 +87,11 @@
       <id>scalanlp.org</id>
       <name>ScalaNLP Maven2</name>
       <url>http://repo.scalanlp.org/repo/</url>
+    </repository>
+    <repository>
+      <id>scalanlp.org</id>
+      <name>ScalaNLP Maven2</name>
+      <url>http://repo.scalanlp.org/repo/org/scalanlp/scalala_2.8.0/</url>
     </repository>
   </repositories>
 
