--- a/bhdmhw1/pom.xml
+++ b/bhdmhw1/pom.xml
@@ -68,7 +68,7 @@
     <dependency>
       <groupId>org.scalanlp</groupId>
       <artifactId>scalala</artifactId>
-      <version>0.4.1-SNAPSHOT</version>
+      <version>2.9.1-1.0.0.0.RC3-SNAPSHOT</version>
     </dependency>
     <!--<dependency>
       <groupID>org.scala-lang</groupID>
